--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -48,6 +48,10 @@
   margin-bottom: 30px;
 }
 
+.text-white {
+  color: #ffffff;
+}
+
 img[class*="align"] {
   margin-bottom: 15px;
   max-width: 50%;
