--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -117,7 +117,7 @@ button {
 }
 
 a.link-text:hover {
-  color: #b01933 !important;
+  color: $color-primary-700 !important;
 }
 
 [class^="icon-"]:before,
@@ -158,7 +158,7 @@ h5.title:not(:last-child) {
 }
 
 .color2 {
-  color: #b01933;
+  color: $color-primary-700;
 }
 
 .pre-title:not(:last-child) {
@@ -200,7 +200,7 @@ h5.title:not(:last-child) {
 .tooltip {
   position: absolute;
   display: block;
-  background: #630e1d;
+  background: $color-primary-900;
   padding: 0 10px;
   color: #fff;
   font-size: 14px;
@@ -300,7 +300,7 @@ a.bottom-tooltip:hover .tooltip {
 
 a.top-tooltip .tooltip:after {
   border-left: 7px solid transparent;
-  border-top: 5px solid #630e1d;
+  border-top: 5px solid $color-primary-900;
   border-right: 7px solid transparent;
   top: 100%;
   left: 50%;
@@ -318,7 +318,7 @@ a:hover .tooltip {
 
 .tooltips a.left-tooltip .tooltip:after {
   border-top: 7px solid transparent;
-  border-left: 5px solid #630e1d;
+  border-left: 5px solid $color-primary-900;
   border-bottom: 7px solid transparent;
   top: calc(50% - 7px);
   left: 100%;
@@ -326,7 +326,7 @@ a:hover .tooltip {
 
 .tooltips a.right-tooltip .tooltip:after {
   border-top: 7px solid transparent;
-  border-right: 5px solid #630e1d;
+  border-right: 5px solid $color-primary-900;
   border-bottom: 7px solid transparent;
   right: 100%;
   top: calc(50% - 7px);
@@ -335,7 +335,7 @@ a:hover .tooltip {
 .tooltips a.bottom-tooltip .tooltip:after {
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-bottom: 5px solid #630e1d;
+  border-bottom: 5px solid $color-primary-900;
   border-top: none;
   bottom: 100%;
   left: calc(50% - 7px);
@@ -380,7 +380,7 @@ a:hover .tooltip {
 
 .our-info:not([class*="style-"]) .info-item > i {
   font-size: 30px;
-  color: #b01933;
+  color: $color-primary-700;
   display: block;
 }
 
@@ -436,7 +436,7 @@ a:hover .tooltip {
 }
 
 .our-info.style-3 .info-item > i {
-  color: #b01933;
+  color: $color-primary-700;
   font-size: 13px;
   line-height: 20px;
   margin-right: 8px;
@@ -495,7 +495,7 @@ a:hover .tooltip {
 }
 
 .blockquote-holder {
-  background: #891328;
+  background: $color-primary-900;
   padding: 40px;
   padding-right: 30px;
   border-radius: 3px;
@@ -531,7 +531,7 @@ blockquote .author span {
 
 .blockquote-holder.style-2 {
   background: #f7f7f7;
-  border-left: 3px solid #891328;
+  border-left: 3px solid $color-primary-900;
 }
 
 .blockquote-holder.style-2 blockquote {
@@ -540,27 +540,4 @@ blockquote .author span {
 
 .blockquote-holder.style-2 blockquote .author span {
   color: #999;
-}
-
-/*----------- Dropcaps --------------*/
-
-.dropcap::first-letter {
-  display: block;
-  float: left;
-  margin: 15px 10px 0 0;
-  font-family: "Lora", sans-serif;
-  font-weight: bold;
-  font-style: italic;
-}
-
-.dropcap::first-letter {
-  font-size: 60px;
-}
-
-.dropcap.type-1::first-letter {
-  color: #b01933;
-}
-
-.dropcap.type-2::first-letter {
-  color: #333;
 }
