--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -34,7 +34,7 @@ textarea {
 
 input:not([type="submit"]):focus,
 textarea:focus {
-  border-color: #b01933;
+  border-color: $color-primary-700;
   -moz-appearance: none;
   outline: 0px none transparent;
 }
@@ -66,7 +66,7 @@ label[for] {
 
 .required:after {
   content: "*";
-  color: #b01933;
+  color: $color-primary-700;
   display: inline-block;
   margin-left: 2px;
   font-size: 18px;
@@ -289,7 +289,7 @@ input[type="checkbox"]:checked + label::after {
   position: absolute;
   top: 0;
   bottom: 0;
-  background: #b01933;
+  background: $color-primary-700;
   margin: 4px 0;
 }
 
@@ -383,7 +383,7 @@ input[type="checkbox"]:checked + label::after {
   position: absolute;
   right: 20px;
   top: 0;
-  color: #b01933;
+  color: $color-primary-700;
   font-size: 20px;
   line-height: 56px;
 }
@@ -479,7 +479,7 @@ input[type="checkbox"]:checked + label::after {
 }
 
 .custom-list.style-2 > li > a:hover {
-  color: #b01933;
+  color: $color-primary-700;
 }
 
 .single-post .custom-list > li span.f-left {
