--- a/scss/components/_testimonials.scss
+++ b/scss/components/_testimonials.scss
@@ -142,7 +142,7 @@
   font-size: 160px;
   line-height: 130px;
   display: block;
-  color: #b01933;
+  color: $color-primary-700;
   letter-spacing: -7px;
   position: absolute;
   top: 0;
