--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -125,7 +125,7 @@
 
 [class*="btn"]:not(.btn-small).btn-style-7 {
   color: #fff;
-  border-color: #c9c9c9;
+  border-color: #ffffff;
 }
 
 [class*="btn"]:not(.btn-small).btn-style-7:hover {
