--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -25,7 +25,7 @@
 }
 
 .main-navigation > ul > li > a {
-  color: $color-primary-900;
+  color: $color-gray-900;
   text-transform: uppercase;
   display: block;
   position: relative;
