--- a/scss/components/_alerts.scss
+++ b/scss/components/_alerts.scss
@@ -101,6 +101,8 @@
   padding: 100px 0;
   font-size: 16px;
   line-height: 28px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .call-out .call-title {
@@ -138,50 +140,6 @@
   margin-top: 15px;
 }
 
-.call-out.newsletter {
-  background: #a3172f;
-  padding: 40px 0;
-  font-size: 16px;
-  text-align: center;
-}
-
-.call-out.newsletter .call-title:not(:last-child) {
-  margin-bottom: 0;
-}
-
-.call-out.newsletter .call-title {
-  padding: 13px 30px 13px 0;
-  font-weight: normal;
-}
-
-.call-out.newsletter .newsletter input {
-  height: 56px;
-  background: #fff;
-  border-color: #fff;
-}
-
-.call-out.newsletter .newsletter .btn {
-  background: #630e1d;
-  border-color: #630e1d;
-  margin-left: 5px;
-  max-width: 64px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.call-out.newsletter .newsletter .btn:hover {
-  background: #891328;
-  border-color: #891328;
-}
-
-.call-out.newsletter .newsletter .btn i {
-  margin-right: 0;
-}
-
-.call-out.newsletter .social-icons {
-  justify-content: center;
-}
-
 .call-out.half-section {
   padding: 0;
   display: -webkit-flex;
@@ -194,7 +152,7 @@
 
 .call-out.half-section > .call-out-col {
   width: 50%;
-  padding: 80px 15px;
+  padding: 80px 25px;
   position: relative;
   text-align: center;
   z-index: 1;
@@ -219,45 +177,4 @@
 
 .call-out.half-section > .call-out-col:hover .bg-img {
   opacity: 0.8;
-}
-
-.chose-donate {
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin: 0 -3px -6px;
-}
-
-.chose-donate > * {
-  margin: 0 3px 8px;
-}
-
-.chose-donate .call-title {
-  font-weight: normal;
-  padding-right: 40px;
-}
-
-.chose-donate .chose-item {
-  background: #fff;
-  border-radius: 3px;
-  padding: 18px 20px;
-  width: 90px;
-  max-height: 56px;
-  font-size: 18px;
-  color: #333;
-  text-align: left;
-}
-
-.chose-donate .chose-item:hover,
-.chose-donate .chose-item.active {
-  color: #b01933;
-}
-
-.call-out:not(.newsletter) .chose-donate .btn:not(:only-child) {
-  margin-top: 0;
 }
